[package]
name = "graph-core"
version = "0.22.0"
edition = "2018"

[dependencies]
async-trait = "0.1.50"
atomic_refcell = "0.1.10"
bytes = "0.5"
futures01 = { package="futures", version="0.1.31" }
futures = { version="0.3.13", features=["compat"] }
graph = { path = "../graph" }
lazy_static = "1.2.0"
lru_time_cache = "0.11"
semver = "1.0.17"
serde = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
fail = "0.5"

[dev-dependencies]
graph-mock = { path = "../mock" }
walkdir = "2.3.3"
test-store = { path = "../store/test-store" }
hex = "0.4.3"
graphql-parser = "0.3"
pretty_assertions = "1.4.0"
anyhow = "1.0"