[package]
name = "graph"
version = "0.22.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
atomic_refcell = "0.1.10"
bigdecimal = { version = "0.4.1", features = ["serde"] }
bytes = "0.5"
diesel = { version = "2.0.4", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
diesel_derives = "2.0"
chrono = "0.4.26"
Inflector = "0.11.3"
isatty = "0.2.0"
reqwest = { version = "0.10", features = ["json", "stream"] }

# master contains changes such as
# https://github.com/paritytech/ethabi/pull/140, which upstream does not want
# and we should try to implement on top of ethabi instead of inside it, and
# tuple support which isn't upstreamed yet. For now, we shall deviate from
# ethabi, but long term we want to find a way to drop our fork.
ethabi = { git = "https://github.com/graphprotocol/ethabi.git", branch = "master" }
hex = "0.4.3"
http = "0.2.3"
futures = "0.3.13"
graphql-parser = "0.3.0"
lazy_static = "1.4.0"
mockall = "0.11.4"
num-bigint = { version = "^0.2.6", features = ["serde"] }
num_cpus = "1.16.0"
num-traits = "0.2.16"
rand = "0.6.1"
semver = "1.0.18"
serde = { version = "1.0.125", features = ["rc"] }
serde_derive = "1.0.125"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_yaml = "0.9"
slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
stable-hash = { git = "https://github.com/graphprotocol/stable-hash" }
strum = "0.25.0"
strum_macros = "0.25.1"
slog-async = "2.5.0"
slog-envlogger = "2.1.0"
slog-term = "2.7.0"
petgraph = "0.6.3"
tiny-keccak = "2.0.2"
tokio = { version = "0.2.25", features = ["stream", "rt-threaded", "rt-util", "blocking", "time", "sync", "macros", "test-util", "net"] }
tokio-stream = { version = "0.1.14", features = ["sync"] }
tokio-retry = { git = "https://github.com/graphprotocol/rust-tokio-retry", branch = "update-to-tokio-02" }
url = "2.4.0"
prometheus = "0.13.3"
priority-queue = "1.0.4"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
wasmparser = "0.110.0"
thiserror = "1.0.24"
parking_lot = "0.12.1"

# Our fork contains a small but hacky patch.
web3 = { git = "https://github.com/graphprotocol/rust-web3", branch = "master" }

[dev-dependencies]
test-store = { path = "../store/test-store" }
maplit = "1.0.2"
structopt = { version = "0.3" }
