[package]
name = "graph"
version = "0.22.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
async-trait = "0.1.50"
atomic_refcell = "0.1.13"
bigdecimal = { version = "0.4.7", features = ["serde"] }
bytes = "1.0"
diesel = { version = "2.2.7", features = ["postgres", "serde_json", "numeric", "r2d2", "chrono"] }
diesel_derives = "2.2"
chrono = "0.4.39"
Inflector = "0.11.3"
isatty = "0.2.0"
reqwest = { version = "0.11", features = ["json", "stream"] }

# master contains changes such as
# https://github.com/paritytech/ethabi/pull/140, which upstream does not want
# and we should try to implement on top of ethabi instead of inside it, and
# tuple support which isn't upstreamed yet. For now, we shall deviate from
# ethabi, but long term we want to find a way to drop our fork.
ethabi = { git = "https://github.com/graphprotocol/ethabi.git", branch = "master" }
hex = "0.4.3"
http = "1.2.0"
futures = "0.3.13"
graphql-parser = "0.3.0"
lazy_static = "1.5.0"
mockall = "0.13.1"
num-bigint = { version = "^0.4.3", features = ["serde"] }
num_cpus = "1.16.0"
num-traits = "0.2.19"
rand = "0.9.0"
semver = "1.0.25"
serde = { version = "1.0.125", features = ["rc"] }
serde_derive = "1.0.125"
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
serde_yaml = "0.9"
slog = { version = "2.7.0", features = ["release_max_level_trace", "max_level_trace"] }
stable-hash = { git = "https://github.com/graphprotocol/stable-hash" }
strum = "0.27.1"
strum_macros = "0.27.1"
slog-async = "2.5.0"
slog-envlogger = "2.1.0"
slog-term = "2.7.0"
petgraph = "0.7.1"
tiny-keccak = "2.0.2"
tokio = { version = "0.2.25", features = ["stream", "rt-threaded", "rt-util", "blocking", "time", "sync", "macros", "test-util", "net"] }
tokio-stream = { version = "0.1.17", features = ["sync"] }
tokio-retry = { git = "https://github.com/graphprotocol/rust-tokio-retry", branch = "update-to-tokio-02" }
url = "2.5.2"
prometheus = "0.13.4"
priority-queue = "2.2.2"
futures03 = { version = "0.3.1", package = "futures", features = ["compat"] }
wasmparser = "0.118.2"
thiserror = "2.0.11"
parking_lot = "0.12.3"

# Our fork contains a small but hacky patch.
web3 = { git = "https://github.com/graphprotocol/rust-web3", branch = "master" }

[dev-dependencies]
test-store = { path = "../store/test-store" }
maplit = "1.0.2"
structopt = { version = "0.3" }
