[package]
name = "graph-node"
version = "0.22.0"
edition = "2018"
default-run = "graph-node"

[[bin]]
name = "graph-node"
path = "src/main.rs"

[[bin]]
name = "graphman"
path = "src/bin/manager.rs"

[dependencies]
clap = "4.4.17"
env_logger = "0.10.1"
git-testament = "0.2"
graphql-parser = "0.3"
futures = { version = "0.3.13", features = ["compat"] }
lazy_static = "1.2.0"
url = "2.5.0"
crossbeam-channel = "0.5.11"
graph = { path = "../graph" }
graph-core = { path = "../core" }
graph-chain-ethereum = { path = "../chain/ethereum" }
graph-chain-arweave = { path = "../chain/arweave" }
graph-graphql = { path = "../graphql" }
graph-runtime-wasm = { path = "../runtime/wasm" }
graph-server-http = { path = "../server/http" }
graph-server-index-node = { path = "../server/index-node" }
graph-server-json-rpc = { path = "../server/json-rpc"}
graph-server-websocket = { path = "../server/websocket" }
graph-server-metrics = { path = "../server/metrics" }
graph-store-postgres = { path = "../store/postgres" }
regex = "1.4.6"
serde = { version = "1.0.117", features = ["derive", "rc"] }
serde_regex = "1.1.0"
structopt = { version = "0.3.26", features = ["wrap_help"] }
toml = "0.8.2"
shellexpand = "3.1.0"
diesel = "2.1.4"
fail = "0.5"

[dev-dependencies]
assert_cli = "0.6"
