[package]
name = "graph-chain-ethereum"
version = "0.22.0"
edition = "2018"

[dependencies]
chrono = "0.4"
futures = "0.3.13"
http = "1.1.0" # must be compatible with the version rust-web3 uses
jsonrpc-core = "18.0.0"
graph = { path = "../../graph" }
lazy_static = "1.5.0"
state_machine_future = "0.2"
serde = "1.0"
config = { version = "0.14", features = ["toml"], default-features = false }
dirs-next = "2.0"
anyhow = "1.0"
fail = "0.5"

[dev-dependencies]
diesel = { version = "2.2.4", features = ["postgres", "serde_json", "numeric", "r2d2"] }
mockall = "0.13.0"
graph-core = { path = "../../core" }
graph-store-postgres = { path = "../../store/postgres" }
pretty_assertions = "1.4.1"
test-store = { path = "../../store/test-store" }
