[package]
name = "graph-runtime-wasm"
version = "0.22.0"
edition = "2018"

[dependencies]
async-trait = "0.1.50"
atomic_refcell = "0.1.10"
ethabi = { git = "https://github.com/graphprotocol/ethabi.git", branch = "master" }
futures = "0.3.13"
hex = "0.4.3"
graph = { path = "../../graph" }
graph-graphql = { path = "../../graphql" }
bs58 = "0.4.0"
graph-runtime-derive = { path = "../derive" }
semver = "1.0.17"
lazy_static = "1.4"
uuid = { version = "1.3.3", features = ["v4"] }
strum = "0.24.1"
strum_macros = "0.24.3"
anyhow = "1.0"
wasmtime = "0.27.0"
defer = "0.1"
never = "0.1"

[dev-dependencies]
graphql-parser = "0.3"
graph-core = { path = "../../core" }
graph-mock = { path = "../../mock" }
test-store = { path = "../../store/test-store" }
graph-chain-arweave = { path = "../../chain/arweave" }
