[package]
name = "graph-server-http"
version = "0.22.0"
edition = "2018"

[dependencies]
futures = "0.3.13"
graphql-parser = "0.3"
http = "1.3"
hyper = "1.7"
serde = "1.0"
graph = { path = "../../graph" }
graph-graphql = { path = "../../graphql" }

[dev-dependencies]
graph-mock = { path = "../../mock" }
