[package]
name = "graph-store-postgres"
version = "0.22.0"
edition = "2018"

[dependencies]
async-trait = "0.1.50"
blake3 = "1.8.2"
derive_more = { version = "2.0.1" }
diesel = { version = "2.2.12", features = ["postgres", "serde_json", "numeric", "r2d2"] }
# We use diesel-dynamic-schema straight from git as the project has not
# made a release as a crate yet
diesel-dynamic-schema = { git = "https://github.com/diesel-rs/diesel-dynamic-schema", rev="a8ec4fb1" }
diesel-derive-enum = { version = "2.1", features = ["postgres"] }
diesel_migrations = "2.2.0"
fallible-iterator = "0.3.0"
futures = "0.3.13"
graph = { path = "../../graph" }
graph-chain-ethereum = { path = "../../chain/ethereum" }
graph-graphql = { path = "../../graphql" }
graphql-parser = "0.3"
Inflector = "0.11.3"
lazy_static = "1.5"
lru_time_cache = "0.11"
maybe-owned = "0.3.4"
postgres = "0.19.1"
rand = "0.9.2"
serde = "1.0"
uuid = { version = "1.16.0", features = ["v4"] }
stable-hash = { git = "https://github.com/graphprotocol/stable-hash" }
backtrace = "0.3"

[dev-dependencies]
clap = "4.5.42"
graphql-parser = "0.3"
hex = "0.4.3"
test-store = { path = "../test-store" }
hex-literal = "1.0"
graph-mock = { path = "../../mock" }
